--- a/index.css
+++ b/index.css
@@ -127,7 +127,7 @@ nav {
     font-size: clamp(1rem, 2vw, 1.5rem);
     color: #ffffff;
 }
-.btn {
+.btn , .btn2 {
     margin-top: 1.5rem;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
